k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: growai-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "growai-frontend-ip"
    networking.gke.io/managed-certificates: "growai-cert"
    kubernetes.io/ingress.allow-http: "true"
    ingress.gcp.kubernetes.io/pre-shared-cert: "growai-ssl-cert"
spec:
  rules:
  - host: growai-map.com
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: growai-backend
            port:
              number: 8081
      - path: /actuator/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: growai-backend
            port:
              number: 8081
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: growai-frontend
            port:
              number: 80
  - host: api.growai-map.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: growai-backend
            port:
              number: 8081
